# kinetics

./: .gitignore  Cargo.toml  README.md  readme.md
backend/: .env.secrets  Cargo.toml  local.env  local.env.tpl
backend/src/: config.rs  crat.rs  deploy.rs  env.rs  function.rs  json.rs  lib.rs  main.rs  secret.rs  template.rs  upload.rs  user.rs
backend/src/auth/: code.rs  lambda.rs  mod.rs  session.rs  validator.rs
backend/src/stack/: deploy.rs  destroy.rs  mod.rs  stack.rs  status.rs
backend/src/template/: crat.rs  function.rs  mod.rs  secret.rs  template.rs
backend/src/usage/: cron.rs  mod.rs
cli/: Cargo.toml
cli/playground/: template.yml
cli/src/: api.rs  build.rs  cli.rs  client.rs  commands.rs  config.rs  crat.rs  credentials.rs  deploy.rs  destroy.rs  envs.rs  error.rs  function.rs  init.rs  invoke.rs  lib.rs  list.rs  logger.rs  login.rs  logout.rs  logs.rs  macros.rs  main.rs  migration.rs  migrations.rs  org.rs  parser.rs  pipeline.rs  process.rs  project.rs  request.rs  rollback.rs  runner.rs  secret.rs  secrets.rs  sqldb.rs  stat.rs  stats.rs  template.rs  utils.rs  (+1 more)
cli/src/api/: auth.rs  client.rs  domain.rs  domains.rs  mod.rs  orgs.rs  project.rs  projects.rs  request.rs  upload.rs
cli/src/api/auth/: code.rs  info.rs  logout.rs  mod.rs
cli/src/api/auth/code/: exchange.rs  mod.rs
cli/src/api/auth/token/: create.rs  list.rs
cli/src/api/auth/tokens/: create.rs  delete.rs  mod.rs  validators.rs
cli/src/api/db/: connect.rs
cli/src/api/domain/: add.rs  create.rs  domain_status.rs  remove.rs  status.rs
cli/src/api/domains/: create.rs  validators.rs
cli/src/api/envs/: list.rs
cli/src/api/func/: logs.rs  mod.rs  stats.rs  status.rs  toggle.rs
cli/src/api/orgs/: create.rs  delete.rs  list.rs  members.rs  validators.rs
cli/src/api/orgs/members/: delete.rs  invite.rs
cli/src/api/orgs/owners/: add.rs
cli/src/api/project/: sqldb.rs
cli/src/api/project/sqldb/: connect.rs
cli/src/api/stack/: deploy.rs  destroy.rs  mod.rs  rollback.rs  status.rs  versions.rs
cli/src/api/stack/deploy/: envs.rs  mod.rs
cli/src/auth/: lambda.rs
cli/src/backend/: mod.rs
cli/src/commands/: auth.rs  build.rs  cicd.rs  deploy.rs  domain.rs  envs.rs  func.rs  init.rs  invoke.rs  login.rs  logout.rs  migrations.rs  mod.rs  orgs.rs  proj.rs  projects.rs
cli/src/commands/auth/: logout.rs  mod.rs  token.rs  tokens.rs
cli/src/commands/auth/tokens/: create.rs  delete.rs  list.rs
cli/src/commands/cicd/: github-workflow-template.yaml  github.rs  init.rs  mod.rs
cli/src/commands/deploy/: runner.rs
cli/src/commands/domain/: add.rs  remove.rs  status.rs
cli/src/commands/envs/: list.rs
cli/src/commands/func/: list.rs  logs.rs  mod.rs  start.rs  stats.rs  stop.rs  toggle.rs
cli/src/commands/init/: github-workflow-template.yaml  mod.rs  runner.rs
cli/src/commands/invoke/: docker.rs  local.rs  mod.rs  remote.rs  runner.rs  service.rs
cli/src/commands/invoke/service/: dynamodb.rs  mod.rs  queue.rs  sqldb.rs
cli/src/commands/login/: runner.rs
cli/src/commands/migrations/: apply.rs  create.rs  mod.rs
cli/src/commands/orgs/: create.rs  delete.rs  invite.rs  list.rs  members.rs  owners.rs
cli/src/commands/orgs/members/: delete.rs  invite.rs
cli/src/commands/orgs/owners/: add.rs
cli/src/commands/proj/: destroy.rs  list.rs  mod.rs  rollback.rs  versions.rs
cli/src/config/: build.rs  deploy.rs  kinetics.rs  mod.rs  project.rs
cli/src/invoke/: docker.rs  dynamodb.rs  local.rs  mod.rs  remote.rs  sqldb.rs
cli/src/invoke/service/: dynamodb.rs  queue.rs
cli/src/process/: mod.rs
cli/src/project/: cache.rs  config_file.rs  parse.rs  templates.rs  workspace.rs
cli/src/project/templates/: endpoint.rs
cli/src/stack/: status.rs
cli/src/tools/: config.rs  database.rs  http.rs  mod.rs  queue.rs  sqldb.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/stack/: deploy.rs  mod.rs  stack.rs
common/src/template/: crat.rs  function.rs  mod.rs  sanitize.rs  template.rs
example/: .env.secrets  Cargo.toml
example/src/: cron.rs  database.rs  endpoint.rs  environment.rs  main.rs  secrets.rs  some.rs  worker.rs
example/src/basic/: cron.rs  worker.rs
examples/: .env  .env.secrets  Cargo.toml  kinetics.toml
examples/fixtures/: example.json  my_table.json
examples/migrations/: 20251124125730_init.up.sql  20260302125259_insert.up.sql
examples/src/: database.rs  datadog.rs  environment.rs  errors.rs  init.rs  init_once.rs  lib.rs  queue.rs  secrets.rs  sqldb.rs  urls.rs
examples/src/basic/: cron.rs  endpoint.rs  mod.rs  url.rs  worker.rs
macro/: Cargo.toml
macro/src/: lib.rs
macro/src/common/: attrs.rs  mod.rs
parser/: Cargo.toml  README.md
parser/src/: cron.rs  endpoint.rs  environment.rs  function.rs  lib.rs  params.rs  parser.rs  worker.rs
parser/src/params/: cron.rs  endpoint.rs  worker.rs
procmacro/: Cargo.toml
procmacro/src/: lib.rs
public/: readme.md
