[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-sdk-cloudformation = "1.68.0"
aws-sdk-cloudwatch = "1.67.0"
aws-sdk-lambda = "1.71.0"
aws-sdk-resourcegroupstagging = "1.61.0"
lambda_http = "0.14.0"
uuid = { version = "1.15.1", features = ["v4"] }
lambda_runtime = "0.13.0"
kinetics-macro = { path = "../macro" }
aws-config = "1.5.18"
aws-sdk-s3 = "1.78.0"
eyre = "0.6.12"
serde_json = "1.0.140"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.20"
zip = "2.2.3"
aws-sdk-ssm = "1.67.0"
regex = "1.11.1"
aws-sdk-dynamodb = "1.67.0"
serde-email = "3.1.0"
chrono = { version = "0.4.40", features = ["serde"] }
rand = "0.9.0"
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls", "json"] }
sha256 = "1.6.0"
magic-crypt = "4.0.1"

[package.metadata.kinetics.kvdb.kinetics]
name = "kinetics"
