[package]
name = "kinetics"
version = "0.10.7"
edition = "2021"
description = "Kinetics is a hosting platform for Rust applications that allows you to deploy all types of workloads by writing **only Rust code**."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/ottofeller/kinetics"
readme = "../README.md"
keywords = ["hosting", "platform", "deployment", "kinetics", "development"]
categories = ["command-line-utilities"]

[[bin]]
name = "kinetics"
path = "src/main.rs"

[dependencies]
aws-config = "1.8.8"
aws-sdk-dynamodb = "1.95.0"
aws-sdk-sqs = "1.86.0"
aws-sdk-dsql = "=1.8.0"
aws_lambda_events = "^0"
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.18.1", features = ["v4"] }
clap = { version = "4.5.49", features = ["derive"] }
eyre = "0.6.12"
regex = "1.12.2"
walkdir = "2.5.0"
kinetics-macro = { path = "../macro", version = "0.10.7" }

zip = "6.0.0"
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }
toml_edit = "0.23.7"
rust_dotenv = "0.1.2"
reqwest = { version = "0.12.24", features = [
    "json",
    "blocking",
    "rustls-tls",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34+deprecated"
syn = { version = "2.0", features = ["full", "visit"] }
prettyplease = "0.2.37"
twox-hash = "2.1.2"
futures = "0.3.31"
indicatif = "0.18.0"
console = "0.16.1"
color-eyre = "0.6.5"
crossterm = "0.29.0"
async-trait = "0.1.89"
log = "0.4.28"
env_logger = "0.11.8"
kinetics-parser = { path = "../parser", version = "0.10.7" }
tabled = "0.20.0"
terminal_size = "0.4.3"
lambda_runtime = "0.14.4"
crc-fast = "1.5.0"
base64 = "0.22.1"
sha256 = "1.6.0"
bytes = "^1.0"
http = "^1.0"
http-body = "^1.0"
lambda_http = "^0"
tower = "^0"
percent-encoding = "2.3.2"
url = "2.5.7"
sqlx = { version = "0.8.6", features = ["postgres", "chrono", "runtime-tokio-rustls"] }
