[package]
name = "kinetics"
version = "0.13.4"
edition = "2021"
description = "Kinetics is a hosting platform for Rust applications that allows you to deploy all types of workloads by writing **only Rust code**."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/ottofeller/kinetics"
readme = "../README.md"
keywords = ["hosting", "platform", "deployment", "kinetics", "development"]
categories = ["command-line-utilities"]

[[bin]]
name = "kinetics"
path = "src/main.rs"

[dependencies]
aws-config = "1.8.14"
aws-sdk-dynamodb = "1.107.0"
aws-sdk-sqs = "1.95.0"
aws-sdk-dsql = "1.52.0"

# 1.0 makes some structs which we construct non_exhaustive, needs refactoring
aws_lambda_events = "1.0.3"

chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.5.60", features = ["derive"] }
eyre = "0.6.12"
regex = "1.12.3"
walkdir = "2.5.0"
kinetics-macro = { path = "../macro", version = "0.13.4" }
humantime = "2.3.0"
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }
toml_edit = "0.25.3+spec-1.1.0"
rust_dotenv = "0.1.3"
reqwest = { version = "0.13.2", features = [
  "json",
  "blocking",
  "default-tls",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34+deprecated"
syn = { version = "2.0", features = ["full", "visit"] }
prettyplease = "0.2.37"
twox-hash = "2.1.2"
futures = "0.3.32"
indicatif = "0.18.4"
indicatif-log-bridge = "0.2.3"
console = "0.16.2"
color-eyre = "0.6.5"
crossterm = "0.29.0"
async-trait = "0.1.89"
log = "0.4.29"
env_logger = "0.11.9"
kinetics-parser = { path = "../parser", version = "0.13.4" }
tabled = "0.20.0"
terminal_size = "0.4.3"
lambda_runtime = "^1.0"

# Lock the lower version while as the higher one conflicts with AWD SDK crates
crc-fast = "^1.6.0"

base64 = "0.22.1"
sha256 = "1.6.0"
bytes = "^1.0"
http = "^1.0"
http-body = "^1.0"
lambda_http = "^1.0"
tower = "^0"
percent-encoding = "2.3.2"
url = "2.5.8"
sqlx = { version = "0.8.6", features = [
  "postgres",
  "chrono",
  "runtime-tokio-rustls",
] }
sqlparser = "0.61.0"
once_cell = "1.21.3"
