[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.6.1"
aws-sdk-cloudformation = "1.71.0"
aws-sdk-s3 = "1.82.0"
aws-sdk-ssm = "1.71.0"
aws-sdk-sts = "1.65.0"
chrono = { version = "0.4.40", features = ["serde"] }
eyre = "0.6.12"
magic-crypt = "4.0.1"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = { workspace = true }
uuid = { version = "1.16.0", features = ["v4"] }
