[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.6.0"
aws-sdk-dynamodb = "1.69.0"
aws_lambda_events = "0.16.0"
lambda_runtime = "0.13.0"
kinetics-macro = { path = "../macro" }
lambda_http = "0.14.0"
tokio = "1.44.1"

[package.metadata.kinetics.kvdb.users]
name = "users"
