[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.6.1"
aws-sdk-dynamodb = "1.71.2"
aws_lambda_events = "0.16.0"
lambda_runtime = "0.13.0"
kinetics-macro = { path = "../macro" }
lambda_http = "0.14.0"
tokio = "1.44.2"
aws-sdk-sqs = "1.64.0"

[package.metadata.kinetics.kvdb.users]
name = "users"
