[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.6.3"
aws-sdk-dynamodb = "1.77.0"
aws_lambda_events = "0.16.0"
lambda_runtime = "0.13.0"
kinetics-macro = { path = "../macro" }
lambda_http = "0.14.0"
tokio = "1.45.0"
aws-sdk-sqs = "1.70.0"
serde_json = { version = "1.0.140", features = ["default"] }

[package.metadata.kinetics.kvdb.users]
name = "mytable"
