[package]
name = "examples"
version = "0.9.2"
edition = "2021"

[dependencies]
http = "^1.0"
kinetics = "0.12.5"
tokio = "1.49.0"
tower = "^0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["default"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls"] }
matchit = "0.9.1"
