[package]
name = "kinetics-macro"
version = "0.9.2"
edition = "2021"
description = "A set of macros used in Kinetics project."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/ottofeller/kinetics"
keywords = ["kinetics", "rust", "macro"]
categories = ["parsing"]

[dependencies]
syn = {version = "2.0.106", features = ["fold"] }
kinetics-parser = { path = "../parser", version = "0.9.2" }
quote = "1.0.41"
proc-macro2 = "1.0.101"
heck = "0.5.0"

[lib]
proc-macro = true
