[package]
name = "kinetics-macro"
version = "0.13.3"
edition = "2021"
description = "A set of macros used in Kinetics project."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/ottofeller/kinetics"
keywords = ["kinetics", "rust", "macro"]
categories = ["parsing"]

[dependencies]
syn = "2.0.117"
kinetics-parser = { path = "../parser", version = "0.13.3" }

[lib]
proc-macro = true
