[package]
name = "kinetics-parser"
version = "0.2.6"
edition = "2021"
description = "A parser used for Kinetics project."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/ottofeller/kinetics"
keywords = ["kinetics", "parser", "rust", "macro"]
categories = ["parsing"]

[dependencies]
syn = { version = "2.0", features = ["full", "visit"] }
